fix landing page font size expanding too large

--- a/src/stylesheets/Header.scss
+++ b/src/stylesheets/Header.scss
@@ -10,7 +10,7 @@
 }
 
 .title {
-  font-size: 10vw;
+  font-size: clamp(3rem, 10vw, 10rem);
   font-weight: 300;
 }
 
